# testez

./: .gitignore  .gitmodules  .luacheckrc  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  build-installer  default.project.json  foreman.toml  index.html  install-dependencies  install-dependencies.bat  mkdocs.yml  open_place.py  rojo.json  rotriever.toml  sitemap.xml  spec.lua  test-place.project.json  wally.toml
.github/workflows/: ci.yml  clabot.yml  deploy-docs.yml  (+1 more)
api-reference/: index.html
docs/: api-reference.md  index.md
lib/: Expectation.lua  Expectation.spec.lua  LifecycleHooks.lua  TestBootstrap.lua  TestEnum.lua  TestPlan.lua  TestPlanBuilder.lua  TestPlanner.lua  TestResults.lua  TestRunner.lua  createSpy.lua  equalityWrapper.lua  init.lua
search/: search_index.json
src/: Context.lua  Expectation.lua  ExpectationContext.lua  LifecycleHooks.lua  TestBootstrap.lua  TestEnvironment.lua  TestPlan.lua  TestPlanBuilder.lua  TestPlanner.lua  TestRunner.lua  TestSession.lua
test/: lemur.lua  roblox-cli.sh  runner.server.lua
testez-cli/: Cargo.toml  README.md  build.rs
testez-cli/src/: bundled_libraries.rs  cli.rs  dependencies.rs  fs.rs  lemur-entry.lua  main.rs  source.rs  test-runner.lua  test_place.rs  vfs.rs
testez-cli/src/targets/: lemur.rs  mod.rs  roblox_cli.rs
testez-cli/src/tools/: lua.rs  mod.rs  roblox_cli.rs  rojo.rs
tests/: .luacheckrc  Context.lua  Expectation.lua  api.lua  deepEqual.lua  errorTypes.lua  expandOrder.lua  lifecycleHooks.lua  planner.lua  shallowEqual.lua  specTests.lua
(+54 files in other folders)
